# The-Construct-CheckPoint-3-ROS2-Basics-CPP

./: README.md
catkin_ws/src/load_params/params/: topics_turtlebot.yaml
catkin_ws/src/my_package/: CMakeLists.txt  package.xml
install/: setup.sh
install/robot_patrol/lib/robot_patrol/: patrol_node
install/robot_patrol/share/ament_index/resource_index/parent_prefix_path/: robot_patrol
install/robot_patrol/share/robot_patrol/: local_setup.sh  package.sh
log/: latest_build
ros2_ws/src/custom_interfaces/: package.xml
ros2_ws/src/robot_patrol/: package.xml
ros2_ws/src/robot_patrol/include/: direction_service.h  patrol.h  patrol_with_service.h
ros2_ws/src/robot_patrol/launch/: start_direction_service.launch.py
ros2_ws/src/robot_patrol/src/: go_to_point_action_node.cpp  patrol_node.cpp
src/custom_interfaces/: CMakeLists.txt  package.xml
src/robot_patrol/: CMakeLists.txt  package.xml
src/robot_patrol/include/: go_to_point_action.h
src/robot_patrol/launch/: main.launch.py  start_gotopoint_action.launch.py  start_patrolling.launch.py  start_test_service.launch.py
src/robot_patrol/src/: .scans.txt.swp  direction_service.cpp  direction_service_node.cpp  go_to_point_action.cpp  patrol.cpp  patrol_with_service.cpp  patrol_with_service_node.cpp  scans.txt  test.cpp
